# stadsarkiv-client

./: .env-dist  .flake8  .gitignore  404.html  Dockerfile  README.md  README.server.md  TODO.md  app.py  birthday_paradox.py  black-fix.sh  debug_test.py  docker-compose.yml  docker-server.sh  fix.sh  hooks.py  httpx_test.py  index.html  language.py  mkdocs.yml  plugins.py  plugins_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  run-debug.sh  run-module.sh  schema-example.json  schema-person.json  settings.py  settings_local.py  setup.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: mkdocs-deploy.yml  test.yml
_assets/: theme.css
authentication/: index.html
changelog/: index.html
contribution/: index.html
deployment/: index.html
docs/: ERRORS.md  NOTES.md  README-SERVER.md  README.client.md  README.md  README.server.md  SUGGESTIONS.md  TODO.md  authentication.md  changelog.md  contribution.md  deployment.md  examples.md  index.md  installation.md  record.json  requirements.txt  roadmap.md  search.json  siden-sidst.md  stadsarkiv-client.service
docs/usage/: CLI_reference.md  facets.md  hooks.md  pages.md  settings.md  (+1 more)
endpoints/: auth.py  pages.py
example-config/: .env  hooks.py  hooks_aarhusarkivet.py  hooks_teaterarkivet.py  language.py  settings.py  settings_facets.py  settings_facets_alt.py  settings_facets_simple.py  settings_facets_teaterarkiv.py
example-config-aarhus/: NOTES.md  facets.py  hooks.py  language.py  settings.py  settings.yml  settings_facets.py
example-config-demo/: hooks.py  settings.py
example-config-salling/: .gitignore  Figma.css  README.md  convert_images.py  erindringer.json  extract.js  extract_stories.js  figma.html  hooks.py  memories.json  settings.py  stories.json
example-config-simple/: .env  facets.py  hooks.py  language.py  language.yml  settings.py  settings.yml  settings_facets.py
example-config-teater/: facets.json  facets.py  facets_imported.json  hooks.py  json_facets_to_dict.py  language.py  language.yml  settings.py  settings_facets.py
example-schemas/: address.json  adresse-old-system.json  schema-car.json  schema-person.json
examples/: index.html
generate_client/: .gitignore  README.md  config.yml  example.yml  generate_client.sh  requirements.txt
generate_openaws_client/: README.md  config.yml  generate_client.sh
installation/: index.html
lib/: context.py  fastapi_client.py  logging.py  middleware.py  templates.py
maya/: .env.dist  __init__.py  __main__.py  app.py  hooks.py  routes.py  settings.py  settings_facets.py  settings_query_params.py
migrations/: default.py  errors.py  orders.py
notes/: notes.md  orders.md  roadmap.md  suggestions.md
port-entities/: port-address.py
resources-port/: api_port.py  port-address.py
resources_port/: README.md  api_port.py  run.py
routes/: auth.py  routes.py
schema-examples/: record.json  schema-person.json
search/: search_index.json
settings/: settings.py
stadsarkiv_client/: .env-dist  .env.dist  .is_source  __cli.py  __init__.py  __main__.py  app.py  cli.py  facets.py  hooks.py  query_params.py  routes.py  settings.py  settings_facets.py  settings_query_params.py  test_serve.py
templates/: _flash.html  admin.html  base.html  login.html  test.html
tests/: auth.py  auth_test.py  page_test.py  pluggy_test.py  resources_test.py  settings-test.py  settings_test.py
(+673 files in other folders)
