[tool.poetry]
name = "stadsarkiv-client"
version = "v1.1.30"
description = "A generic starlette client for our Fastapi-webservice"
authors = ["Aarhus City Archive <stadsarkiv@aarhus.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
attrs = "22.2.0"
autopep8 = "2.0.1"
babel = "2.12.1"
black = "23.1.0"
certifi = "2023.7.22"
charset-normalizer = "3.0.1"
click = "8.1.3"
flake8 = "6.0.0"
gunicorn = "21.2.0"
h11 = "0.14.0"
httpcore = "0.16.3"
httpx = "0.23.3"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
mccabe = "0.7.0"
mypy = "1.1.1"
mypy-extensions = "1.0.0"
packaging = "23.0"
pathspec = "0.11.0"
platformdirs = "3.0.0"
pluggy = "1.0.0"
pycodestyle = "2.10.0"
pycparser = "2.20"
pyflakes = "3.0.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
python-multipart = "0.0.5"
rfc3986 = "1.5.0"
sentry-sdk = "1.29.2"
six = "1.15.0"
sniffio = "1.3.0"
starlette = "0.27.0"
starsessions = "2.1.1"
tomli = "2.0.1"
types-pyyaml = "6.0.12.8"
types-requests = "2.28.11.15"
types-urllib3 = "1.26.25.8"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
uvicorn = "0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
[tool.mypy]
exclude = ['venv', '.venv', 'generate_openaws_client', 'tests', 'example-config']
