[project]
name = "maya"
version = "1.3.824"
description = "Aarhus City Archives client for generating individual browser-based GUI-clients"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
[[project.authors]]
name = "Aarhus Stadsarkiv"
email = "stadsarkiv@aarhus.dk"

[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project.scripts]
maya = "maya.commands.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 140

[tool.mypy]
exclude = [ ".venv", "tests", "example-config", "build", "bin-local", "sites",]

[tool.bump_version]
version_file = "maya/__init__.py"

[tool.setuptools.package-data]
maya = [ "locales/**", "templates/**", "static/**", ".env-dist",]

[tool.setuptools.packages.find]
where = [ ".",]
exclude = [ "tests",]

[tool.bump_version.replace_patterns.pip]
file = "sites/demo/docs/01-maya.md"
search = "<!-- LATEST-VERSION-PIP -->"
replace = "\tpip install git+https://github.com/aarhusstadsarkiv/maya@{version}\n"

[tool.bump_version.replace_patterns.pipx]
file = "sites/demo/docs/01-maya.md"
search = "<!-- LATEST-VERSION-PIPX -->"
replace = "\tpipx install git+https://github.com/aarhusstadsarkiv/maya@{version}\n"
